Handle color changes, vibration and "Digits" better

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">@color/primary_material_dark</color>
+
     <color name="red">#ffff0000</color>
 </resources>
