Add backspace image Solve "Errors" problem

--- a/app/src/main/res/layout-v14/layout_keyboard.xml
+++ b/app/src/main/res/layout-v14/layout_keyboard.xml
@@ -89,12 +89,14 @@
         <Space
             android:layout_weight="1"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonBackspace"
             style="?android:attr/buttonBarButtonStyle"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="&lt;--"
-            android:textSize="26sp" />
+            android:contentDescription="backspace"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_backspace_white_24dp"/>
     </TableRow>
 
 </TableLayout>
