--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,100 +1,115 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        style="@style/ToolbarStyle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary_material_dark"
-        android:elevation="4dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
-
-        <TextView
-            android:id="@+id/integerPart_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="56sp" />
-
-        <ImageButton
-            android:id="@+id/refresh_button"
-            android:layout_width="56sp"
-            android:layout_height="56sp"
-            android:layout_alignBottom="@id/integerPart_textView"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:background="@null"
-            android:contentDescription="@string/restart"
-            android:onClick="onClickRestart"
-            android:scaleType="fitCenter" />
-
-        <EditText
-            android:id="@+id/input_editText"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/ToolbarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/integerPart_textView"
-            android:hint="@string/lets_see_what_you_can_do"
-            android:maxLines="8"
-            android:numeric="integer"
-            android:textSize="24sp" />
+            android:background="@color/primary_material_dark"
+            android:elevation="4dp" />
 
-        <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/input_editText"
-            android:layout_marginTop="8dp">
-
-            <TableRow>
-
-                <TextView
-                    android:text="@string/digits_colon"
-                    android:textSize="22sp" />
-
-                <TextView
-                    android:id="@+id/digits_textView"
-                    android:textSize="22sp" />
-            </TableRow>
-
-            <TableRow android:layout_marginTop="4dp">
-
-                <TextView
-                    android:text="@string/errors_colon"
-                    android:textSize="22sp" />
-
-                <TextView
-                    android:id="@+id/errors_textView"
-                    android:textSize="22sp" />
-            </TableRow>
-
-            <TableRow android:layout_marginTop="4dp">
-
-                <TextView
-                    android:text="@string/percentage_colon"
-                    android:textSize="22sp" />
-
-                <TextView
-                    android:id="@+id/percentage_textView"
-                    android:textSize="22sp" />
-            </TableRow>
-        </TableLayout>
-
-        <com.teinproductions.tein.pitrainer.Keyboard
-            android:id="@+id/keyboard"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:visibility="gone" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
-    </RelativeLayout>
-</LinearLayout>
+            <TextView
+                android:id="@+id/integerPart_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="56sp" />
 
+            <ImageButton
+                android:id="@+id/refresh_button"
+                android:layout_width="56sp"
+                android:layout_height="56sp"
+                android:layout_alignBottom="@id/integerPart_textView"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:background="@null"
+                android:contentDescription="@string/restart"
+                android:onClick="onClickRestart"
+                android:scaleType="fitCenter" />
+
+            <EditText
+                android:id="@+id/input_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/integerPart_textView"
+                android:hint="@string/lets_see_what_you_can_do"
+                android:maxLines="8"
+                android:numeric="integer"
+                android:textSize="24sp" />
+
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/input_editText"
+                android:layout_marginTop="8dp">
+
+                <TableRow>
+
+                    <TextView
+                        android:text="@string/digits_colon"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/digits_textView"
+                        android:textSize="22sp" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="4dp">
+
+                    <TextView
+                        android:text="@string/errors_colon"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/errors_textView"
+                        android:textSize="22sp" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="4dp">
+
+                    <TextView
+                        android:text="@string/percentage_colon"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/percentage_textView"
+                        android:textSize="22sp" />
+                </TableRow>
+            </TableLayout>
+
+            <com.teinproductions.tein.pitrainer.Keyboard
+                android:id="@+id/keyboard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:visibility="gone" />
+
+        </RelativeLayout>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/drawer_listView"
+        android:layout_width="@dimen/nav_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/drawer_listView_background"
+        android:elevation="6dp" />
+
+</android.support.v4.widget.DrawerLayout>
