--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimary">@color/primary_material_dark</color>
 
     <color name="red">#ffff0000</color>
+    <color name="drawer_listView_background">@color/background_material_dark</color>
 </resources>
