--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,8 @@
             android:paddingTop="@dimen/activity_vertical_margin" />
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/drawer_listView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/drawer_recyclerView"
         android:layout_width="@dimen/nav_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
