--- a/app/src/main/res/layout/activity_add_number.xml
+++ b/app/src/main/res/layout/activity_add_number.xml
@@ -6,18 +6,18 @@
     tools:context="com.teinproductions.tein.pitrainer.AddNumberActivity">
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbar"
+        android:background="?attr/colorPrimary"
         android:elevation="6dp"
-        android:theme="@style/ToolbarStyle"
-        android:background="?attr/colorPrimary" />
+        android:theme="@style/ToolbarStyle" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -30,12 +30,12 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
+            android:id="@+id/name_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/name_editText"
             android:layout_marginBottom="18dp"
             android:imeOptions="actionNext"
-            android:inputType="textCapSentences"/>
+            android:inputType="textCapSentences" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -52,9 +52,9 @@
             android:id="@+id/integerPart_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
             android:layout_marginBottom="18dp"
-            android:imeOptions="actionNext" />
+            android:imeOptions="actionNext"
+            android:inputType="number" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -71,8 +71,15 @@
             android:id="@+id/fractionalPart_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
             android:maxLines="100"
-            android:numeric="integer"
-            android:imeOptions="actionDone" />
+            android:numeric="integer" />
     </LinearLayout>
+
+    <Button
+        android:layout_margin="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/delete"
+        android:onClick="onClickDelete" />
 </LinearLayout>
