--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -8,33 +8,35 @@
     tools:paddingRight="@dimen/activity_horizontal_margin"
     tools:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/statement_textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/statement_and_settings_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:textSize="27sp"
-        tools:text="8979323846..." />
+        android:layout_marginBottom="16dp">
 
-    <ImageButton
-        android:id="@+id/settings_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/statement_textView"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/statement_textView"
-        android:background="@null"
-        android:contentDescription="@string/settings"
-        android:scaleType="fitCenter"
-        android:src="@mipmap/ic_settings_white_36dp" />
+        <TextView
+            android:id="@+id/statement_textView"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textSize="27sp"
+            tools:text="8979323846..." />
+
+        <ImageButton
+            android:id="@+id/settings_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:contentDescription="@string/settings"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_settings_white_36dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/statement_textView"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_below="@id/statement_and_settings_layout"
+        android:gravity="center_vertical">
 
         <EditText
             android:id="@+id/editText"
@@ -53,7 +55,6 @@
             android:background="@null"
             android:contentDescription="@string/next"
             android:src="@mipmap/ic_arrow_forward_white_36dp" />
-
     </LinearLayout>
 
 
