--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -25,9 +25,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="end"
+            android:gravity="center"
             android:textSize="38sp"
-            tools:text="00:31" />
+            tools:text="00:31.4" />
 
         <ImageButton
             android:id="@+id/restart_button"
