Make text white
Inspect code

--- a/app/src/main/res/layout/fragment_practise.xml
+++ b/app/src/main/res/layout/fragment_practise.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:id="@+id/headerLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/integerPart_textView"
