--- a/app/src/main/res/layout/activity_numbers.xml
+++ b/app/src/main/res/layout/activity_numbers.xml
@@ -1,19 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.teinproductions.tein.pitrainer.NumbersActivity">
 
-    <!-- Toolbar -->
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
         android:elevation="6dp"
-        android:id="@+id/toolbar"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <!-- Main content -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
