--- a/app/src/main/res/layout/dialog_complete_settings.xml
+++ b/app/src/main/res/layout/dialog_complete_settings.xml
@@ -5,37 +5,39 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/number_of_digits_given" />
-
-    <EditText
-        android:id="@+id/digits_given_editText"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/range" />
+        <EditText
+            android:id="@+id/digits_given_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/number_of_digits_given"
+            android:inputType="number" />
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/range_editText"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/length_of_answer" />
+        <EditText
+            android:id="@+id/range_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/range"
+            android:inputType="number" />
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/lengthOfAnswer_editText"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number" />
+        android:layout_height="wrap_content">
 
+        <EditText
+            android:id="@+id/lengthOfAnswer_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/length_of_answer"
+            android:inputType="number" />
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
