--- a/app/src/main/res/layout/layout_keyboard.xml
+++ b/app/src/main/res/layout/layout_keyboard.xml
@@ -9,23 +9,26 @@
 
         <Button
             android:id="@+id/button7"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="7"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
 
         <Button
             android:id="@+id/button8"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="8"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
 
         <Button
             android:id="@+id/button9"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="9"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
     </TableRow>
 
@@ -33,23 +36,26 @@
 
         <Button
             android:id="@+id/button4"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="4"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
 
         <Button
             android:id="@+id/button5"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="5"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
 
         <Button
             android:id="@+id/button6"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="6"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
     </TableRow>
 
@@ -57,23 +63,26 @@
 
         <Button
             android:id="@+id/button1"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="1"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
 
         <Button
             android:id="@+id/button2"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="2"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
 
         <Button
             android:id="@+id/button3"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="3"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
     </TableRow>
 
@@ -81,19 +90,22 @@
 
         <Button
             android:id="@+id/button0"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_weight="1"
             android:text="0"
+            android:textColor="@color/key_board_text_color"
             android:textSize="26sp" />
+
+        <android.support.v4.widget.Space android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/buttonBackspace"
-            style="?android:attr/buttonBarButtonStyle"
+            style="?attr/buttonBarButtonStyle"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:contentDescription="backspace"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_backspace_white_24dp" />
+            android:src="@mipmap/ic_backspace_black_24dp" />
     </TableRow>
 
 </TableLayout>
