--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">@color/primary_material_dark</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#00C853</color>
 
     <color name="red">#ffff0000</color>
-    <color name="drawer_listView_background">@color/background_material_dark</color>
+    <color name="drawer_listView_background">@android:color/white</color>
+    <color name="restart_arrow_color">#ff000000</color>
+    <color name="key_board_text_color">#ff000000</color>
 </resources>
