--- a/app/src/main/res/layout-land/fragment_complete.xml
+++ b/app/src/main/res/layout-land/fragment_complete.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:paddingBottom="@dimen/activity_vertical_margin"
-    tools:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:paddingRight="@dimen/activity_horizontal_margin"
-    tools:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <com.teinproductions.tein.pitrainer.Keyboard
         android:id="@+id/keyboard"
@@ -20,10 +20,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingStart="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/statement_textView"
@@ -44,7 +42,7 @@
             android:background="@null"
             android:contentDescription="@string/settings"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_settings_white_36dp" />
+            android:src="@mipmap/ic_settings_black_36dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:contentDescription="@string/next"
-                android:src="@mipmap/ic_arrow_forward_white_36dp" />
+                android:src="@mipmap/ic_arrow_forward_black_36dp" />
 
         </LinearLayout>
     </RelativeLayout>
