--- a/app/src/main/res/layout-land/fragment_practise.xml
+++ b/app/src/main/res/layout-land/fragment_practise.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:paddingBottom="@dimen/activity_vertical_margin"
-    tools:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:paddingRight="@dimen/activity_horizontal_margin"
-    tools:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <com.teinproductions.tein.pitrainer.Keyboard
         android:id="@+id/keyboard"
@@ -20,10 +20,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingStart="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/integerPart_textView"
@@ -42,7 +40,7 @@
             android:background="@null"
             android:contentDescription="@string/restart"
             android:scaleType="fitCenter"
-            tools:src="@mipmap/ic_refresh_white_36dp" />
+            tools:src="@mipmap/ic_refresh_black_36dp" />
 
         <EditText
             android:id="@+id/input_editText"
