--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -3,22 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:paddingBottom="@dimen/activity_vertical_margin"
-    tools:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:paddingRight="@dimen/activity_horizontal_margin"
-    tools:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:id="@+id/statement_and_settings_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:gravity="bottom">
 
         <TextView
             android:id="@+id/statement_textView"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:textSize="27sp"
             tools:text="8979323846..." />
 
@@ -29,7 +30,7 @@
             android:background="@null"
             android:contentDescription="@string/settings"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_settings_white_36dp" />
+            android:src="@mipmap/ic_settings_black_36dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -54,7 +55,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:contentDescription="@string/next"
-            android:src="@mipmap/ic_arrow_forward_white_36dp" />
+            android:src="@mipmap/ic_arrow_forward_black_36dp" />
     </LinearLayout>
 
 
