--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none"
-    tools:paddingBottom="@dimen/activity_vertical_margin"
-    tools:paddingLeft="@dimen/activity_horizontal_margin"
-    tools:paddingRight="@dimen/activity_horizontal_margin"
-    tools:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:contentDescription="@string/settings"
             android:padding="16dp"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_settings_white_36dp" />
+            android:src="@mipmap/ic_settings_black_36dp" />
 
     </RelativeLayout>
 
