Add high score and done button to TimeFragment

--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -55,6 +56,30 @@
         android:layout_below="@id/input_editText"
         android:textSize="22sp"
         tools:text="Digits: 0" />
+
+    <ImageButton
+        android:id="@+id/done_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/input_editText"
+        android:background="@null"
+        android:contentDescription="@string/done"
+        android:padding="8dp"
+        android:src="@mipmap/ic_done_black_36dp" />
+
+    <ImageButton
+        android:id="@+id/highscores_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/input_editText"
+        android:layout_toLeftOf="@id/done_button"
+        android:layout_toStartOf="@id/done_button"
+        android:background="@null"
+        android:contentDescription="@string/highscores"
+        android:padding="8dp"
+        android:src="@mipmap/ic_crown_black_36dp" />
 
     <com.teinproductions.tein.pitrainer.Keyboard
         android:id="@+id/keyboard"
