--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -13,5 +13,8 @@
         <item
             android:id="@+id/timed_mode_navigation_item"
             android:title="@string/timed_mode_game" />
+        <item
+            android:id="@+id/infinite_series_navigation_item"
+            android:title="@string/infinite_series" />
     </group>
 </menu>
