--- a/app/src/main/res/menu/menu_numbers.xml
+++ b/app/src/main/res/menu/menu_numbers.xml
@@ -4,9 +4,8 @@
 
     <item
         android:id="@+id/action_add"
-        android:title="@string/add_number"
+        android:icon="@mipmap/ic_add_white_36dp"
         android:orderInCategory="100"
-        app:showAsAction="always"
-        android:icon="@mipmap/ic_add_white_36dp" />
-
+        android:title="@string/add_number"
+        app:showAsAction="always" />
 </menu>
