--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,10 +10,7 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <style name="AppTheme.Drawer">
-<!--
-        <item name="android:textSize">20sp</item>
--->
-    </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
